--- a/index.html
+++ b/index.html
@@ -1,35 +1,29 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="./style.css">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="./style.css" />
     <title>Document</title>
-</head>
-<body>
+  </head>
+  <body>
     <div class="top">
-        <div class="top--avatar">top--avatar</div>
-        <div class="top--name">top--name</div>
+      <div class="top__avatar">avatar</div>
+      <div class="top__name">name</div>
     </div>
 
     <div class="body-main">
-        <div class="col-left">
-            <div class="col--card1">
-                column--card
-            </div>
-            <div class="col--card1">
-                column--card
-            </div>
-            <div class="col--card1">
-                column--card
-            </div>
-        </div>
-        <div class="col-right">
-            <div class="col--card2">column--content</div>
-            <div class="col--card2">column--content</div>
-        </div>
+      <div class="body-main__col-left">
+        <div class="body-main__card body-main__card--small">card</div>
+        <div class="body-main__card body-main__card--small">card</div>
+        <div class="body-main__card body-main__card--small">card</div>
+      </div>
+      <div class="body-main__col-right">
+        <div class="body-main__card body-main__card--large">content</div>
+        <div class="body-main__card body-main__card--large">content</div>
+      </div>
     </div>
-    
+
     <div class="bottom">bottom</div>
-</body>
+  </body>
 </html>
